# freecivx

./: .gitattributes  .gitignore  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  EXPLORATION_SUMMARY.md  EXTRACTION_SUMMARY.md  FINAL_SUMMARY.txt  FREECIV_MECHANICS_GUIDE.txt  HEXAGON_SAFETY_IMPROVEMENTS.md  HEXAGON_SHADER_VERIFICATION.md  HEXAGON_TERRAIN_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  JAVASCRIPT_OUTPUT_SAMPLE.txt  JAVA_IMPLEMENTATION_REFERENCE.md  Makefile.dev  PREDEFINED_NATIONS.js  PR_SUMMARY.md  PULL_REQUEST_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  README_NATIONS_EXTRACTION.md  WEBGPU_IMPLEMENTATION.md  WEBGPU_SHADER_GUIDE.md  build.sh  create-proof-readme.sh  dev-setup.sh  docker-compose.yml  docker-entrypoint.sh  freeciv_analysis.md  modernize.py  modernize_advanced.py  package-lock.json  package.json  pom.xml  quick_summary.txt  safe_templates.py  save-proof-image.js  (+2 more)
.github/: copilot-instructions.md
config/: flyway_h2.tmpl  gen-from-templates.sh  web.context.tmpl  web.context_h2.tmpl  web.properties.tmpl
doc/: AI_COMMAND_CENTER_INTENTS.md  COPILOT_IMPROVEMENT_PLAN.md  COPILOT_STANDALONE_TESTING.md  Docker.md  FINAL_SUMMARY.md  FREECIV21_VS_JAVASCRIPT_SERVER.md  HEIGHTMAP_SEPARATION.md  HEXAGONAL_IMPLEMENTATION.md  HEXAGON_IMPROVEMENTS.md  HEXAGON_IMPROVEMENTS_2026.md  HEX_PLAN.md  HEX_TOPOLOGY_COMPARISON.md  JAVASCRIPT_MODERNIZATION.md  JAVASCRIPT_UPDATE_ANALYSIS.md  PodmanDocker.md  REMOVING_HARDCODED_CONSTANTS.md  RUST_AI_C_AI_INTEGRATION.md  RUST_AI_IMPLEMENTATION.md  RUST_AI_IMPROVEMENT_PLAN.md  RUST_AI_IMPROVEMENT_SUMMARY.md  STANDALONE_CLIENT_PLAN.md  TECH_DIALOG_MODERNIZATION.md  WEBGPU_RENDERER_REVIEW.md  Windows Subsystem for Linux.md  (+4 more)
freeciv-rust-ai/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  FUTURE_LLAMACPP_INTEGRATION.md  IMPROVEMENTS.md  README.md
freeciv-rust-ai/src/: main.rs  map.rs  packets.rs  state.rs
freeciv-rust-ai/src/ai/: aicity.rs  aihand.rs  aitasks.rs  aitech.rs  aitools.rs  aiunit.rs  mod.rs
freeciv-rust-ai/tests/: integration_test.rs
freeciv/freeciv/ai/rust/: .gitignore  Cargo.toml  Makefile.am  QUICKSTART.md  README.md  rustai.c
freeciv/freeciv/ai/rust/src/: city_management.rs  data_structures.rs  decision.rs  diplomacy.rs  evaluation.rs  lib.rs  logging.rs  military.rs  planning.rs  player_management.rs  settler.rs  wants.rs
(+880 files in other folders)
