[package]
name = "deity-rust-ai"
version = "0.1.0"
edition = "2021"
authors = ["FreecivWorld Contributors"]
description = "Deity Rust AI for Freeciv - An AI client that connects to the Freeciv C server via JSON protocol"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "io-util", "macros"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "deity-rust-ai"
path = "src/main.rs"
